--- a/lib/discuss_web/templates/layout/app.html.eex
+++ b/lib/discuss_web/templates/layout/app.html.eex
@@ -7,11 +7,14 @@
     <title>Discuss · Phoenix Framework</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   </head>
   <body>
     <nav class="light-blue">
       <div class="nav-wrapper container">
-        <a href="/" class="brand-logo"></a>
+        <a href="/" class="brand-logo">
+          Discussions
+        </a>
       </div>
     </nav>
     <main role="main" class="container">
