--- a/lib/discuss_web/templates/topic/index.html.eex
+++ b/lib/discuss_web/templates/topic/index.html.eex
@@ -1,4 +1,4 @@
-<h2>Topics</h2>
+<h5>Topics</h5>
 
 <ul class="collection">
   <%= for topic <- @topics do %>
@@ -7,3 +7,9 @@
     </li>
   <% end %>
 </ul>
+
+<div class="fixed-action-btn">
+  <a href="#" class="btn-floating btn-large waves-effect waves-light red">
+    <i class="material-icons">add</i>
+  </a>
+</div>
