Gererating Anchors with Link Tags

--- a/lib/discuss_web/templates/topic/index.html.eex
+++ b/lib/discuss_web/templates/topic/index.html.eex
@@ -9,7 +9,7 @@
 </ul>
 
 <div class="fixed-action-btn">
-  <a href="#" class="btn-floating btn-large waves-effect waves-light red">
+  <%= link to: Routes.topic_path(@conn, :new), class: "btn-floating btn-large waves-effect waves-light red" do %>
     <i class="material-icons">add</i>
-  </a>
+  <% end %>
 </div>
