--- a/lib/discuss_web/templates/topic/show.html.eex
+++ b/lib/discuss_web/templates/topic/show.html.eex
@@ -1,8 +1,12 @@
-<%= @topic.title %>
-<%# only for demo purpose %>
-<%# <button>Ping!</button> %>
+<h5><%= @topic.title %></h5>
+
+<div class="input-field">
+  <textarea class="materialize-textarea"></textarea>
+  <button class="btn">Add Comment</button>
+</div>
+
 <script>
   document.addEventListener("DOMContentLoaded", function() {
-    window.createSocket(<%= @topic.id %>)
-  })
+    window.createSocket(<%= @topic.id %>);
+  });
 </script>
